# ArcPIC

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  setupLCG.sh
pic2d/: CMakeLists.txt  calcScaling.py  create_symlinks.cmake  input.txt  makeRundir.py
pic2d/GLEanalysis/: 2Dpic_density_densfile.py
pic2d/analysis/: CMakeLists.txt  density_densfile.py  fieldMap.py  potentialMap.py
pic2d/h/: ArcPicConfig.h  ParticleSpecies.h  arcbound_bohm.h  arcbound_flexFN.h  arcbound_flexFN2.h  arcbound_flexFN2_tableNeutrals.h  arcbound_flexFN_origNeutrals.h  arcbound_original.h  arcbound_original_newheatspike.h  arcbound_sumTipFNField.h  arcbounds.h  arrays1.h  backup.h  checkbounds.h  circuit.h  colls.h  dim.h  efield.h  engy.h  initialParticles.h  input.h  moms.h  my_mem.h  outputz.h  phi.h  pic.h  print_par.h  push.h  var.h  vdf.h  weightPotential.h
pic2d/src/: ArcPicConfig.cpp  ParticleSpecies.cpp  arcbound_bohm.cpp  arcbound_flexFN.cpp  arcbound_flexFN2.cpp  arcbound_flexFN2_tableNeutrals.cpp  arcbound_flexFN_origNeutrals.cpp  arcbound_original.cpp  arcbound_original_newheatspike.cpp  arcbound_sumTipFNField.cpp  arcbounds.cpp  backup.cpp  checkbounds.cpp  circuit.cpp  collisions.cpp  e_ion.cpp  engy.cpp  filenames.cpp  init.cpp  initialParticles.cpp  input.cpp  main.cpp  moms.cpp  my_mem.cpp  outputz.cpp  phi.cpp  print_par.cpp  push.cpp  vdf.cpp  weightPotential.cpp
pic2d/tests/: CMakeLists.txt  picFieldTest.cpp
support/: CMakeLists.txt  README.md  submodules.cmake
